# vtx-core

./: .gitignore  Cargo.toml  audit.toml  build.rs
.github/workflows/: cargo-audit.yml  ci.yml
src/: config.rs  handlers.rs  host.rs  lib.rs  main.rs  plugin_manager.rs  registry.rs  resources.rs  state.rs
src/common/: buffer.rs  events.rs  ipc.rs  json_guard.rs  mod.rs
src/middleware/: auth.rs
src/runtime/: bus.rs  context.rs  executor.rs  host_impl.rs  job_registry.rs  jobs.rs  manager.rs  mod.rs
src/runtime/ffmpeg/: binary.rs  manager.rs  mod.rs
src/runtime/host_impl/: context.rs  event_bus.rs  ffmpeg.rs  ffmpeg_policy.rs  http_client.rs  ipc_transport.rs  mod.rs  sql.rs  sql_policy.rs  stream_io.rs
src/runtime/jobs/: adaptive.rs  handlers.rs  worker.rs
src/runtime/manager/: loader.rs  migration_policy.rs  mod.rs  watcher.rs
src/runtime/manager/migration_policy/: ident.rs  mod.rs  rewrite.rs  token.rs
src/runtime/vtx_host_impl/: mod.rs  vtx_context.rs  vtx_event_bus.rs  vtx_ffmpeg.rs  vtx_ffmpeg_policy.rs  vtx_http_client.rs  vtx_ipc_transport.rs  vtx_sql.rs  vtx_sql_policy.rs  vtx_vfs.rs
src/storage/: database.rs  jobs.rs  mod.rs  plugins.rs  registry.rs  scan_roots.rs  videos.rs
src/vfs/: mod.rs
src/vtx_vfs/: entry.rs  manager.rs  mod.rs  utils.rs
src/vtx_vfs/manager/: normalize.rs  ops.rs  resolve.rs  tests.rs
src/web/: mod.rs  state.rs
src/web/api/: admin.rs  mod.rs  plugin.rs  ws.rs
src/web/middleware/: auth.rs
src/web/utils/: errors.rs  mime.rs  mod.rs  streaming.rs
tests/: database_tests.rs  e2e_smoke_tests.rs  job_registry_tests.rs  jobs_tests.rs  migration_policy_tests.rs  plugins_tests.rs  runtime_limits_tests.rs  scan_roots_tests.rs  videos_tests.rs  web_integration_tests.rs  worker_integration_tests.rs
