[package]
name = "vtx-core"
version = "0.1.3"
edition = "2021"

[dependencies]
# Web 框架
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors", "catch-panic"] }

# Wasm 运行时
wasmtime = { version = "21.0", features = ["component-model"] }
wasmtime-wasi = "21.0"

# 数据库
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
rusqlite_migration = "1.2"
rayon = "1.10"

# 工具
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
tokio-util = { version = "0.7", features = ["io"] }
notify = "6.1"
regex = "1.10"
mime_guess = "2.0"

# 可观测性
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 配置管理
config = "0.14"

vtx-format = "0.1.6"
vtx-protocol = { path = "../vtx-protocol/packages/rust" }
futures-util = "0.3.31"
async-trait = "0.1"
sqlparser = "0.45"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
url = "2"

[build-dependencies]
vtx-protocol = "3.5.0"

[dev-dependencies]
http-body-util = "0.1"
tokio-tungstenite = "0.21"
tempfile = "3"
