[package]
name = "vtx-core"
version = "0.1.5"
edition = "2021"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace", "cors", "catch-panic"] }

wasmtime = { version = "40.0.2", features = ["component-model"] }
wasmtime-wasi = "40.0.2"

rusqlite = { version = "0.37", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.31.0"
rusqlite_migration = "2.3.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
uuid = { version = "1", features = ["v4"] }
tokio-util = { version = "0.7", features = ["io"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

config = "0.14"

vtx-format = "0.1.6"
vtx-protocol = "3.6.0"
futures-util = "0.3.31"
sqlparser = "0.45"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
url = "2"
bytes = "1"
object_store = { version = "0.10", features = ["aws"] }
async-stream = "0.3"

[build-dependencies]
vtx-protocol = "3.6.0"

[dev-dependencies]
http-body-util = "0.1"
tokio-tungstenite = "0.21"
tempfile = "3"
tower = { version = "0.5.3", features = ["util"] }
